--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </style>
 <body>
     <div class="lol">
-        <h1 style="color:red">Світ пончиків</h1>
+        <h1">Світ пончиків</h1>
         <img src="/uploads/2023/02/donut.png">
     </div>
 </body>
